ho trovato l'errore del MapIconManager, bisogna solo mettere il percorso giusto ora (fosse facile)